@startuml
title "Modelo Relacional para Dados Extraídos e Estruturados"

entity RegiaoAdministrativa {
    *id : bigint <<generated>>
    *nome : varchar
}

entity UnidadeFederativa {
    *id : bigint <<generated>>
    *nome : varchar
    sigla : varchar
    *regiao_id : bigint <<FK>>
}

RegiaoAdministrativa ||--|{ UnidadeFederativa

entity TipoConsumidor {
    *id : int <<generated>>
    *nome : varchar
    *residencial : tinyint
}

entity MatrizGeradora {
    *id : int <<generated>>
    *nome : varchar
    *tipo_fonte : varchar
}

entity Consumidor {
    *id : int <<generated>>
    *nome : varchar
    *tipo_do_consumidor_id : int <<FK>>
    unidade_federativa_id : int <<FK>>
    regiao_id : int <<FK>>
    *total : int
}

TipoConsumidor ||--o{ Consumidor
UnidadeFederativa |o--o{ Consumidor
RegiaoAdministrativa |o--o{ Consumidor

entity Tarifa {
    *id : bigint <<generated>>
    *periodo_inicio : timestamp
    *periodo_fim : timestamp
    unidade_federativa_id : int <<FK>>
    regiao_id : int <<FK>>
    valor : decimal
}

UnidadeFederativa }o--o{ Tarifa
RegiaoAdministrativa }o--o{ Tarifa

entity ProducaoEnergia {
    *id : bigint <<generated>>
    *matriz_id : int <<FK>>
    *periodo_inicio : timestamp
    *periodo_fim : timestamp
    *energia_produzida : float
    unidade_federativa_id : int <<FK>>
    regiao_id : int <<FK>>
}

RegiaoAdministrativa |o--|{ ProducaoEnergia
UnidadeFederativa |o--|{ ProducaoEnergia
MatrizGeradora ||--o{ ProducaoEnergia

entity Consumo {
    *id : bigint <<generated>>
    *consumidor_id : int <<FK>>
    *consumo : float
    tarifa_id : int <<FK>>
    *periodo_inicio : timestamp
    *periodo_fim : timestamp
}

Tarifa ||--o{ Consumo
Consumidor ||--|{ Consumo

@enduml